<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lable1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/MultiPlayerString"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/down_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/my_button"
        android:text="@string/down"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/player_nmbr"
        app:layout_constraintTop_toBottomOf="@+id/lable1" />

    <Button
        android:id="@+id/up_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/my_button"
        android:text="@string/up"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/player_nmbr"
        app:layout_constraintTop_toBottomOf="@+id/lable1" />

    <TextView
        android:id="@+id/player_nmbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lable1" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smartRefreshLayout"
        android:layout_width="284dp"
        android:layout_height="338dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lable1"
        app:srlEnableOverScrollBounce="true">

        <com.scwang.smartrefresh.layout.header.FalsifyHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/player_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="2dp"
            android:paddingBottom="?attr/actionBarSize" />

        <com.scwang.smartrefresh.layout.footer.FalsifyFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/HintPlayerAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:text="@string/PlayerAddHint"
                android:textSize="14sp" />

        </com.scwang.smartrefresh.layout.footer.FalsifyFooter>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/my_button"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smartRefreshLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>